src/css/app.scss
/* ... */
.search-input:focus::placeholder {
  color: transparent;
}

.app-bar-logo img {
  width: 100%;
  height: 100%;
}
.dark .app-bar-logo {
  .logo-light-wrap {
    display: none;
  }
}
.light .app-bar-logo {
  .logo-dark-wrap {
    display: none;
  }
}

.menu-list {
  display: block;
  position: fixed;
  z-index: 100;
  left: -100vh;
  height: 100%;
  background-color: var(--mdc-theme-primary);
  list-style: none;
  @include border-style;
  padding: 0.25rem;
  & > * {
    margin: 0.5rem 0;
  }
  & a {
    font-variant: small-caps;
  }
  & label {
    padding: 24px;
  }
  & .search-input {
    width: 6rem;
    padding-left: 2rem;
  }
  & .search-field {
    padding: 0;
  }
  & .search-icon {
    position: relative;
    top: -2.5rem;
    left: 0.5rem;
    color: var(--mdc-theme-on-primary);
  }
  & button {
    text-align: center;
    display: flex;
    flex-flow: column;
    width: 3rem;
    height: auto;
    margin: 0.5rem 0;
  }
}
// chrome needs this
section.menu-list > button {
  overflow: visible;
}

.entry {
  float: left;
  width: 100%;
  white-space: normal;
  hr {
    margin: 3rem 0 3rem 0;
    float: right;
    width: 100%;
  }
}

.menu-list-entry {
  display: flex;
  & i {
    padding: 0 0.5rem 0 0;
  }
  margin: 0 0 1rem 0;
}

header .page {
  padding: 1rem 1rem;
  height: calc(100% - 1rem);
  min-width: 2rem;
  text-align: center;
}

.material-icons {
  font-variant: none;
  --webkit-font-display: block;
}
.entry-title {
  margin-bottom: 0.5rem;
}
.entry-info {
  font-size: 0.9rem;
  text-shadow: black 0 0 0.1px;
  margin-bottom: 1rem;
  float: left;
}
.entry .image-link {
  float: left;
  padding: 0.5rem 1rem;
  img {
    max-width: 20rem;
    min-width: 8rem;
    object-fit: fill;
    border-radius: 0.75rem;
    min-height: 8rem;
    background: url("https://api.iconify.design/bx/image.svg") no-repeat center
      center/cover;
    // this should make the placeholder img icon visible on dark mode, but inverts every image
    // body.dark & {
    //   filter: invert(1.0);
    // }
  }
}
.entry-tags {
  font-size: 0.9rem;
  text-align: right;
  margin-bottom: 1rem;
  margin-top: 1rem;
  & .entry-tag-name {
    border: dotted;
    border-width: 2px;
    padding: 5px 10px 5px 10px;
    border-radius: 5px;
    display: inline-flex;
    margin-top: 4px;
    div {
      display: inline-block;
      padding: 0.1rem 0.5rem;
      vertical-align: middle;
    }
  }
}
.app-bar-topics {
  display: none;
  padding: 0 1rem 0 1rem;
  min-width: 15rem;
  overflow: hidden;
  text-overflow: ellipsis;
  text-align: center;
  overflow-x: scroll;
  scrollbar-width: none;
  height: 100%;
  &::-webkit-scrollbar {
    display: none;
  }
  & .topic-item {
    display: inline-block;
    padding: 0 0.5rem 0 0.5rem;
    color: var(--mdc-theme-on-primary);
    font-weight: bold;
    position: relative;
    width: 100%;
    line-height: 2rem;
    & a {
      display: block;
      height: calc(100% - 1rem);
      padding: 0.5rem;
      font-family: Noto Serif;
      font-variant: simplified;
      text-overflow: ellipsis;
      overflow: hidden;
      text-decoration: none;
      font-size: 1rem;
      font-weight: normal;
      background-color: var(--mdc-theme-secondary);
      filter: invert(0.1);
      border-radius: 4px;
      box-shadow: 0 0 0.8px var(--mdc-theme-surface);
      transition: ease-in 0.2s;
      &:hover {
        filter: invert(1);
      }
    }
    & .separator {
      height: 100%;
      width: 0;
      border-right: 1px solid;
      position: absolute;
      top: 0;
      right: 0;
      border-color: var(--mdc-theme-on-secondary);
    }
  }
}

.menu-list .topics-shadow {
  display: none;
}
section {
  position: relative;
  .topics-shadow {
    box-shadow: 30px 0px 10px var(--mdc-theme-primary) inset,
      -30px 0px 10px var(--mdc-theme-primary) inset;
    height: 100%;
    @include width-available;
    position: absolute;
    z-index: 9999;
    pointer-events: none;
    top: 0;
    margin-left: -1rem;
  }
}
section > button > * {
  pointer-events: none;
}

section[role="toolbar"] {
  min-width: 18rem;
  padding: 0;

  & .menu-lang-btn {
    margin-right: 1rem;
  }
}

.menu-list-topics {
  padding: 0;
  text-align: center;
  overflow-y: scroll;
  max-height: calc(100% - 12.5rem);
  scrollbar-width: none; // firefox
  // dont cover lang dropdown menu
  z-index: -1;
  position: relative;
  &::-webkit-scrollbar {
    // chrome
    display: none;
  }
  & .menu-topic-item {
    vertical-align: middle;
    padding: 0;
    border-top: 1px dotted var(--mdc-theme-surface);
    height: 3rem;
    line-height: 3rem;
    // line-height: calc(100% - 0.25rem);
    list-style: none;
    a {
      // position: relative; // for tooltips positioning
      width: 100%;
      display: inline-block;
      pdding: 0.5rem 0;
      font-weight: bold;
      text-transform: uppercase;
      text-decoration: none;
    }
  }
}

[dir="rtl"] .search-suggest {
  left: 0;
  & li a {
    padding-right: 1rem;
    padding-left: 0;
  }
}
[dir="rtl"] form.search {
  & .clear-search-btn {
    right: 0.25rem;
    transform: scaleX(-1);
  }
}
/* ... */

